Fix wrapping issue on collection views due to margin hack on first item
There was a -5px margin being added to the first child of a slider or
collection in order to counter-style the padding and align it with
titles -- except this looks goofy when it wraps because the posters
don't line up in a grid.

Instead, this applies the negative margin to the whole container.

--- a/site/styles/_collections.scss
+++ b/site/styles/_collections.scss
@@ -42,9 +42,6 @@
   @extend .meta-item;
   float: left;
   padding: 5px;
-  &:first-child {
-    margin-left: -5px;
-  }
 
   h2 {
     @include subtitle-1-style;
@@ -341,4 +338,12 @@
 
 .collection-items {
   margin: 0 auto;
+}
+
+// To cancel out the 5px padding on items, add some negative margin to the containers
+.swiper-wrapper,
+.page-collection-items,
+.s72-userlibrary-items,
+.s72-userwishlist-items {
+  margin-left: -5px;
 }
